--- a/posts/music-synthesis-basics-with-python.ipynb
+++ b/posts/music-synthesis-basics-with-python.ipynb
@@ -3,11 +3,29 @@
   {
    "cell_type": "markdown",
    "id": "b7b8d82b",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
-    "Write your post here.\n",
+    "--Intro\n",
     "\n",
-    "![](/images/basic_synth_arch.jpg#centerme)"
+    "## What is music synthesis?\n",
+    "\n",
+    "### The basic architecture of a synthetizer\n",
+    "\n",
+    "![](/images/basic_synth_arch.jpg#centerme)\n",
+    "\n",
+    "### Keyboard Input (KB):\n",
+    "\n",
+    "### Voltage Controlled Oscillator (VCO):\n",
+    "\n",
+    "### Voltage Controlled Filter (VCF):\n",
+    "\n",
+    "### Voltage Controlled Amplifier (VCA):\n",
+    "\n",
+    "### Low Frequency Oscillator (LFO):\n",
+    "\n",
+    "### Envelope Generator (EG):\n"
    ]
   },
   {
@@ -15,7 +33,11 @@
    "id": "27425a33-2fb9-41a1-bcbe-dc568b3b9a08",
    "metadata": {},
    "source": [
-    "## Preparing The Oscillators"
+    "## The Oscillators\n",
+    "\n",
+    "-- Description, intent of the test\n",
+    "\n",
+    "### Signals and Harmonics"
    ]
   },
   {
@@ -372,12 +394,12 @@
    "version": "3.9.4"
   },
   "nikola": {
-   "category": "",
+   "category": "music programming",
    "date": "2021-05-02 15:40:04 UTC-05:00",
    "description": "",
    "link": "",
    "slug": "music-synthesis-basics-with-python",
-   "tags": "",
+   "tags": "Python, DSP",
    "title": "Music Synthesis Basics With Python",
    "type": "text"
   }
