--- a/posts/music-synthesis-wave-analysis-with-python.ipynb
+++ b/posts/music-synthesis-wave-analysis-with-python.ipynb
@@ -13,7 +13,9 @@
     "\n",
     "So how could we define a harmonic? We can keep it simple by saying that if you have a sine wave that has a given frequency `F`, a harmonic is a wave that has a frecuency which is a multiple of `F`. You can generate a new wave with a different shape by summing the two signals. This will make `F` the fundamental frequency of that signal.\n",
     "\n",
-    "It is hard to understand how this looks and that is why the visual aid always helps. We will see exactly how a sine wave looks like and the rest of the basic signals used in music synthesis. We will be able to listen to them also and notice how the sound changes when we add different harmonics to a sine wave.\n",
+    "There are two ways that you can help yourself wrap your head around this. You can read about the [Overdertone Series](https://en.wikipedia.org/wiki/Harmonic_series_(music)), which is the music theory approach for understanding harmonics, or you can read about the [Fourier Series](https://en.wikipedia.org/wiki/Fourier_series) which is the full mathematical foundation of sound synthesis.\n",
+    "\n",
+    "It is hard to understand how this looks and that is why the visual aid always helps. We will see exactly how a sine wave looks like and the rest of the basic signals used in music synthesis. We will be able to listen to them also and notice how the sound changes when we add different harmonics to a sine wave. For this, we will be using the [Fourier Transform](https://en.wikipedia.org/wiki/Fourier_transform) in order to visualize the different harmonic components of a given signal.\n",
     "\n",
     "That is why this post is written as a jupyter notebook, so we can get hands on with python into visualizing everything."
    ]
@@ -25,7 +27,7 @@
    "source": [
     "### Importing Necessary Modules\n",
     "\n",
-    "I will use pandas for plotting, I have found it is an easier way to deal with matplotlib. Numpy and Scipy are used to generate the signals that we want to analyze. In addition, Scipy will provide the necesarry functions to do the Fourier transform."
+    "I will use pandas for plotting, I have found it is an easier way to deal with matplotlib. Numpy and Scipy are used to generate the signals that we want to analyze. In addition, Scipy will provide the necesarry functions to do the [Fast Fourier transform](https://en.wikipedia.org/wiki/Fast_Fourier_transform)."
    ]
   },
   {
