--- a/posts/music-synthesis-wave-analysis-with-python.ipynb
+++ b/posts/music-synthesis-wave-analysis-with-python.ipynb
@@ -5,19 +5,19 @@
    "id": "27425a33-2fb9-41a1-bcbe-dc568b3b9a08",
    "metadata": {},
    "source": [
-    "Sound synthesis is all about combining basic electrical waveforms and processing them through different modules or components in order to obtain an output that either emulates sounds found in physical instruments or make new sound effects or musical tones. The main component in charge of generating the that output signal is the Voltage Controlled Oscillator (VCO). The most common generated signals in a synthetizer are sine, square, sawtooth and triangle. I wanted to make the excercise of analizing these signals from the harmonics point of view, the visual aid is always useful if you want to understand exactly what a harmonic is.\n",
+    "Sound synthesis is all about combining basic electrical waveforms and processing them through different modules or components in order to obtain an output that either emulates sounds found in physical instruments or make new sound effects or musical tones. The main synthetizer component in charge of generating the output signal is the [Voltage Controlled Oscillator](https://en.wikipedia.org/wiki/Voltage-controlled_oscillator) (VCO). The most common generated signals in a synthetizer are sine, square, sawtooth and triangle. I wanted to make the excercise of analyzing these signals from the harmonics point of view, the visual aid is always useful if you want to understand exactly what a harmonic is.\n",
     "\n",
     "### Signals and Harmonics\n",
     "\n",
-    "What are harmonics? For starters, it is not a sole property of musical theory. It is a property of waves in general. Where there are waves involved, there is a harmonic analysis that can be done. That is why we talk about harmonics in music, where the waves are generated from the physical interaction of the musical instruments. Music synthesis is no different, we generate the harmonics from electrical waves which are eventualy transformed into sound waves.\n",
+    "What are harmonics? For starters, it is not a sole property of musical theory. It is a property of waves in general. Where there are waves involved, there is a harmonic analysis that can be done. That is why we talk about harmonics in music, where the sound waves are generated from the physical interaction with the musical instruments. Music synthesis is no different, we generate the harmonics from electrical waves which are eventualy transformed into sound waves.\n",
     "\n",
-    "So how could we define a harmonic? We can keep it simple by saying that if you have a sine wave that has a given frequency `F`, a harmonic is a wave that has a frecuency which is a multiple of `F`. You can generate a new wave with a different shape by summing the two signals. This will make `F` the fundamental frequency of that signal.\n",
+    "So how can we define a harmonic? We can keep it simple by saying that if you have a wave that has a given frequency `F`, a harmonic is a wave that has a frequency which is a multiple of `F`. You can generate a new wave with a different shape by summing the two signals. This will make `F` the fundamental frequency of that signal.\n",
     "\n",
     "There are two ways that you can help yourself wrap your head around this. You can read about the [Overdertone Series](https://en.wikipedia.org/wiki/Harmonic_series_(music)), which is the music theory approach for understanding harmonics, or you can read about the [Fourier Series](https://en.wikipedia.org/wiki/Fourier_series) which is the full mathematical foundation of sound synthesis.\n",
     "\n",
-    "It is hard to understand how this looks and that is why the visual aid always helps. We will see exactly how a sine wave looks like and the rest of the basic signals used in music synthesis. We will be able to listen to them also and notice how the sound changes when we add different harmonics to a sine wave. For this, we will be using the [Fourier Transform](https://en.wikipedia.org/wiki/Fourier_transform) in order to visualize the different harmonic components of a given signal.\n",
+    "It is hard to understand this and that is why the visual aid always helps. We will see exactly how a sine wave looks like and the rest of the basic signals used in music synthesis. We will be able to listen to them also and notice how the sound changes when there are different harmonics present in a wave. For this, we will be using the [Fourier Transform](https://en.wikipedia.org/wiki/Fourier_transform) in order to visualize the different harmonic components of a given signal.\n",
     "\n",
-    "That is why this post is written as a jupyter notebook, so we can get hands on with python into visualizing everything."
+    "That is why this post is written as a jupyter notebook, so we can get hands on with python for visualizing everything."
    ]
   },
   {
@@ -27,7 +27,7 @@
    "source": [
     "### Importing Necessary Modules\n",
     "\n",
-    "I will use pandas for plotting, I have found it is an easier way to deal with matplotlib. Numpy and Scipy are used to generate the signals that we want to analyze. In addition, Scipy will provide the necesarry functions to do the [Fast Fourier transform](https://en.wikipedia.org/wiki/Fast_Fourier_transform)."
+    "I will use pandas as a plotter helper, I have found it is an easier way to deal with matplotlib. Numpy and Scipy are used to generate the signals that we want to analyze. In addition, Scipy will provide the necesarry functions to do the [Fast Fourier transform](https://en.wikipedia.org/wiki/Fast_Fourier_transform), which is what we need in order to visualize the harmonic content of the waves."
    ]
   },
   {
@@ -58,7 +58,15 @@
    "id": "a3805b33-b0c3-4873-9827-7fe80ae6d9d3",
    "metadata": {},
    "source": [
-    "### Define The Signals"
+    "### Define The Signals\n",
+    "\n",
+    "As I mentioned above, we will be generating four signals:\n",
+    "- Sine\n",
+    "- Sawtooth\n",
+    "- Square\n",
+    "- Triangle\n",
+    "\n",
+    "They will be plotted and audible."
    ]
   },
   {
@@ -81,7 +89,9 @@
    "id": "e38b3f1e-2388-4e11-9d0d-0cfd9ceabcab",
    "metadata": {},
    "source": [
-    "### Audio and Plot"
+    "### Audio and Plot\n",
+    "\n",
+    "We define our python function that will help us plot and listen to the signals."
    ]
   },
   {
@@ -135,7 +145,13 @@
    "id": "2d2f83ee-251f-4cba-952a-61004b53ae1b",
    "metadata": {},
    "source": [
-    "## Analyze The Waves"
+    "### Analyze The Waves\n",
+    "\n",
+    "We now proceed to look into each wave and understanding the graphs being displayed. Each wave will be generated with a 440Hz frequency (musical note A) and we will be able to visualize up to the 10th harmonic in the plot. \n",
+    "\n",
+    "**WARNING**\n",
+    "\n",
+    "Be careful when listening to the audio. If you are wearing headphones, turned down the volume or take them off."
    ]
   },
   {
@@ -143,7 +159,11 @@
    "id": "cb7216bc-b6e8-467a-a590-0d1e1ee75af9",
    "metadata": {},
    "source": [
-    "### Sine Wave"
+    "### Sine Wave\n",
+    "\n",
+    "The sine wave is the fundamental wave shape. From this, every other wave shape is formed. When we talk about any type of complex wave, we can always decompose them to a sum of the fundamental sine wave with its harmonics. \n",
+    "\n",
+    "As you can see below, the top part of the graph shows you how a sine wave looks like. The bottom portion shows you the frequency components the wave has. We only see one frequency component at 440Hz, which is its fundamental frequency. So far, everything checks. The sine wave is in fact a \"pure\" fundamental wave and it makes sense to think that other wave shapes can be derived from it."
    ]
   },
   {
@@ -199,7 +219,11 @@
    "id": "406881c7-e938-45bb-87ac-70d80ce5cea6",
    "metadata": {},
    "source": [
-    "### Square Wave"
+    "### Square Wave\n",
+    "\n",
+    "Square waves are used in many electronics applications, the most common one is for clock signals in digital circuits. In music synthesis, it is one of the most common and it is worth taking a closer look at it.\n",
+    "\n",
+    "Below we see again the wave shape along with its frequency components. Different to the sine wave, we see 5 different frequency components. The one with the greater magnitude lies in the fundamental frequency of 440Hz, the rest are its harmonic components. As we can see, and this is one of the interesting parts, there are only odd harmonics (frequencies multiple of 3, 5, 7 and 9) which seem to decay in magnitude exponentially. This means that we could break down this signal into at least 5 different sine waves with different weights and frequencies based on odd multiples of the fundamental frequency."
    ]
   },
   {
@@ -255,7 +279,11 @@
    "id": "d7cce6ef-3cdd-4f77-a51e-f93187be6516",
    "metadata": {},
    "source": [
-    "### Sawtooth Wave"
+    "### Sawtooth Wave\n",
+    "\n",
+    "Into the sawtooth wave. Also known in music synthesis as plain `saw` or `ramp`, it is also very common in synthetizer hardware architectures. \n",
+    "\n",
+    "Going directly to the harmonic analysis, we see that this wave has frequency components in all 10 harmonics and they also have their magnitude decaying exponentially. I often heard that in music synthesis the sawtooth wave is considered \"rich in harmonic content\" and now I understand why. The same principle applies as in the previous example: we could break down this signal into at least 10 different sine waves with different weights and frequencies based on odd multiples of the fundamental frequency."
    ]
   },
   {
@@ -311,7 +339,11 @@
    "id": "18a4a60f-4aa3-4d8a-bb39-4b0fcb0f09d7",
    "metadata": {},
    "source": [
-    "### Triangle Wave"
+    "### Triangle Wave\n",
+    "\n",
+    "The triangle wave is not as popular in synthetizer architectures as the square and sawtooth when being used in a VCO. When it is present, it is mostly considered for bass sounds or \"suboscillator\" usage.\n",
+    "\n",
+    "The harmonic content of this wave is low, sharing the common characteristic of the square wave which is only odd harmonics are present. The difference is in the order of magnitude, which is obviously lower. If you can listen to the wave, the sound is much closer to the sine wave than to the square wave. "
    ]
   },
   {
@@ -360,6 +392,20 @@
    ],
    "source": [
     "play_and_plot_wave(\"triangle\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "329667d7-b351-4e02-a345-2fa20e94db6e",
+   "metadata": {},
+   "source": [
+    "### Summing Up\n",
+    "\n",
+    "We got to take a closer look into 4 different wave shapes most commonly used in music synthesis. The most harmonically rich wave is the sawtooth, followed by the square and triangle. Harmonics are not a musical concept, it is a property that we defined to help us describe complex waves in general.\n",
+    "\n",
+    "Hopefully when you listen or read about \"harmonic content\" of a wave when looking into synths, you will now have a better idea of what they are reffering to. \n",
+    "\n",
+    "There is a lot to talk about on how to manipulate harmonics in sound design. How there are substractive, additive and FM synthesis and how all of those  techniques manipulate harmonics to obtain different results in sound waves. But that might be a subject of future posts."
    ]
   }
  ],
