--- a/posts/music-synthesis-wave-analysis-with-python.ipynb
+++ b/posts/music-synthesis-wave-analysis-with-python.ipynb
@@ -8,6 +8,7 @@
     "Sound synthesis is all about combining basic electrical waveforms and processing them through different modules or components in order to obtain an output that either emulates sounds found in physical instruments or make new sound effects or musical tones. The main synthetizer component in charge of generating the output signal is the [Voltage Controlled Oscillator](https://en.wikipedia.org/wiki/Voltage-controlled_oscillator) (VCO). The most common generated signals in a synthetizer are sine, square, sawtooth and triangle. I wanted to make the excercise of analyzing these signals from the harmonics point of view, the visual aid is always useful if you want to understand exactly what a harmonic is.\n",
     "\n",
     "### Signals and Harmonics\n",
+    "&nbsp;\n",
     "\n",
     "What are harmonics? For starters, it is not a sole property of musical theory. It is a property of waves in general. Where there are waves involved, there is a harmonic analysis that can be done. That is why we talk about harmonics in music, where the sound waves are generated from the physical interaction with the musical instruments. Music synthesis is no different, we generate the harmonics from electrical waves which are eventualy transformed into sound waves.\n",
     "\n",
@@ -26,6 +27,7 @@
    "metadata": {},
    "source": [
     "### Importing Necessary Modules\n",
+    "&nbsp;\n",
     "\n",
     "I will use pandas as a plotter helper, I have found it is an easier way to deal with matplotlib. Numpy and Scipy are used to generate the signals that we want to analyze. In addition, Scipy will provide the necesarry functions to do the [Fast Fourier transform](https://en.wikipedia.org/wiki/Fast_Fourier_transform), which is what we need in order to visualize the harmonic content of the waves."
    ]
@@ -59,6 +61,7 @@
    "metadata": {},
    "source": [
     "### Define The Signals\n",
+    "&nbsp;\n",
     "\n",
     "As I mentioned above, we will be generating four signals:\n",
     "- Sine\n",
@@ -90,6 +93,7 @@
    "metadata": {},
    "source": [
     "### Audio and Plot\n",
+    "&nbsp;\n",
     "\n",
     "We define our python function that will help us plot and listen to the signals."
    ]
@@ -146,10 +150,13 @@
    "metadata": {},
    "source": [
     "### Analyze The Waves\n",
+    "&nbsp;\n",
     "\n",
     "We now proceed to look into each wave and understanding the graphs being displayed. Each wave will be generated with a 440Hz frequency (musical note A) and we will be able to visualize up to the 10th harmonic in the plot. \n",
+    "&nbsp;\n",
     "\n",
-    "**WARNING**\n",
+    "### WARNING\n",
+    "&nbsp;\n",
     "\n",
     "Be careful when listening to the audio. If you are wearing headphones, turned down the volume or take them off."
    ]
@@ -160,6 +167,7 @@
    "metadata": {},
    "source": [
     "### Sine Wave\n",
+    "&nbsp;\n",
     "\n",
     "The sine wave is the fundamental wave shape. From this, every other wave shape is formed. When we talk about any type of complex wave, we can always decompose them to a sum of the fundamental sine wave with its harmonics. \n",
     "\n",
@@ -220,6 +228,7 @@
    "metadata": {},
    "source": [
     "### Square Wave\n",
+    "&nbsp;\n",
     "\n",
     "Square waves are used in many electronics applications, the most common one is for clock signals in digital circuits. In music synthesis, it is one of the most common and it is worth taking a closer look at it.\n",
     "\n",
@@ -280,6 +289,7 @@
    "metadata": {},
    "source": [
     "### Sawtooth Wave\n",
+    "&nbsp;\n",
     "\n",
     "Into the sawtooth wave. Also known in music synthesis as plain `saw` or `ramp`, it is also very common in synthetizer hardware architectures. \n",
     "\n",
@@ -340,6 +350,7 @@
    "metadata": {},
    "source": [
     "### Triangle Wave\n",
+    "&nbsp;\n",
     "\n",
     "The triangle wave is not as popular in synthetizer architectures as the square and sawtooth when being used in a VCO. When it is present, it is mostly considered for bass sounds or \"suboscillator\" usage.\n",
     "\n",
@@ -400,6 +411,7 @@
    "metadata": {},
    "source": [
     "### Summing Up\n",
+    "&nbsp;\n",
     "\n",
     "We got to take a closer look into 4 different wave shapes most commonly used in music synthesis. The most harmonically rich wave is the sawtooth, followed by the square and triangle. Harmonics are not a musical concept, it is a property that we defined to help us describe complex waves in general.\n",
     "\n",
