--- a/posts/music-synthesis-wave-analysis-with-python.ipynb
+++ b/posts/music-synthesis-wave-analysis-with-python.ipynb
@@ -5,7 +5,7 @@
    "id": "27425a33-2fb9-41a1-bcbe-dc568b3b9a08",
    "metadata": {},
    "source": [
-    "Sound synthesis is all about combining basic electrical waveforms and processing them through different modules or components in order to obtain an output that either emulates sounds found in physical instruments or make new sound effects or musical tones. The main synthetizer component in charge of generating the output signal is the [Voltage Controlled Oscillator](https://en.wikipedia.org/wiki/Voltage-controlled_oscillator) (VCO). The most common generated signals in a synthetizer are sine, square, sawtooth and triangle. I wanted to make the excercise of analyzing these signals from the harmonics point of view, the visual aid is always useful if you want to understand exactly what a harmonic is.\n",
+    "Sound synthesis is all about combining basic electrical waveforms and processing them through different modules or components in order to obtain an output that either emulates sounds found in physical instruments or make new sound effects or musical tones. The main synthesizer component in charge of generating the output signal is the [Voltage Controlled Oscillator](https://en.wikipedia.org/wiki/Voltage-controlled_oscillator) (VCO). The most common generated signals in a synthesizer are sine, square, sawtooth and triangle. I wanted to make the excercise of analyzing these signals from the harmonics point of view, the visual aid is always useful if you want to understand exactly what a harmonic is.\n",
     "\n",
     "### Signals and Harmonics\n",
     "&nbsp;\n",
@@ -291,7 +291,7 @@
     "### Sawtooth Wave\n",
     "&nbsp;\n",
     "\n",
-    "Into the sawtooth wave. Also known in music synthesis as plain `saw` or `ramp`, it is also very common in synthetizer hardware architectures. \n",
+    "Into the sawtooth wave. Also known in music synthesis as plain `saw` or `ramp`, it is also very common in synthesizer hardware architectures. \n",
     "\n",
     "Going directly to the harmonic analysis, we see that this wave has frequency components in all 10 harmonics and they also have their magnitude decaying exponentially. I often heard that in music synthesis the sawtooth wave is considered \"rich in harmonic content\" and now I understand why. The same principle applies as in the previous example: we could break down this signal into at least 10 different sine waves with different weights and frequencies based on odd multiples of the fundamental frequency."
    ]
@@ -352,7 +352,7 @@
     "### Triangle Wave\n",
     "&nbsp;\n",
     "\n",
-    "The triangle wave is not as popular in synthetizer architectures as the square and sawtooth when being used in a VCO. When it is present, it is mostly considered for bass sounds or \"suboscillator\" usage.\n",
+    "The triangle wave is not as popular in synthesizer architectures as the square and sawtooth when being used in a VCO. When it is present, it is mostly considered for bass sounds or \"suboscillator\" usage.\n",
     "\n",
     "The harmonic content of this wave is low, sharing the common characteristic of the square wave which is only odd harmonics are present. The difference is in the order of magnitude, which is obviously lower. If you can listen to the wave, the sound is much closer to the sine wave than to the square wave. "
    ]
