Added image to post

--- a/posts/music-synthesis-wave-analysis-with-python.ipynb
+++ b/posts/music-synthesis-wave-analysis-with-python.ipynb
@@ -5,6 +5,8 @@
    "id": "27425a33-2fb9-41a1-bcbe-dc568b3b9a08",
    "metadata": {},
    "source": [
+    "![](/images/waveforms.png#centerme)\n",
+    "\n",
     "Sound synthesis is all about combining basic electrical waveforms and processing them through different modules or components in order to obtain an output that either emulates sounds found in physical instruments or make new sound effects or musical tones. The main synthesizer component in charge of generating the output signal is the [Voltage Controlled Oscillator](https://en.wikipedia.org/wiki/Voltage-controlled_oscillator) (VCO). The most common generated signals in a synthesizer are sine, square, sawtooth and triangle. I wanted to make the excercise of analyzing these signals from the harmonics point of view, the visual aid is always useful if you want to understand exactly what a harmonic is.\n",
     "\n",
     "### Signals and Harmonics\n",
