--- a/posts/music-synthesis-wave-analysis-with-python/index.ipynb
+++ b/posts/music-synthesis-wave-analysis-with-python/index.ipynb
@@ -16,7 +16,7 @@
     "\n",
     "So how can we define a harmonic? We can keep it simple by saying that if you have a wave that has a given frequency `F`, a harmonic is a wave that has a frequency which is a multiple of `F`. You can generate a new wave with a different shape by summing the two signals. This will make `F` the fundamental frequency of that signal.\n",
     "\n",
-    "There are two ways that you can help yourself wrap your head around this. You can read about the [Overdertone Series](https://en.wikipedia.org/wiki/Harmonic_series_(music)), which is the music theory approach for understanding harmonics, or you can read about the [Fourier Series](https://en.wikipedia.org/wiki/Fourier_series) which is the full mathematical foundation of sound synthesis.\n",
+    "There are two ways that you can help yourself wrap your head around this. You can read about the [Overtone Series](https://en.wikipedia.org/wiki/Harmonic_series_(music)), which is the music theory approach for understanding harmonics, or you can read about the [Fourier Series](https://en.wikipedia.org/wiki/Fourier_series) which is the full mathematical foundation of sound synthesis.\n",
     "\n",
     "It is hard to understand this and that is why the visual aid always helps. We will see exactly how a sine wave looks like and the rest of the basic signals used in music synthesis. We will be able to listen to them also and notice how the sound changes when there are different harmonics present in a wave. For this, we will be using the [Fourier Transform](https://en.wikipedia.org/wiki/Fourier_transform) in order to visualize the different harmonic components of a given signal.\n",
     "\n",
@@ -31,7 +31,7 @@
     "### Importing Necessary Modules\n",
     "&nbsp;\n",
     "\n",
-    "I will use pandas as a plotter helper, I have found it is an easier way to deal with matplotlib. Numpy and Scipy are used to generate the signals that we want to analyze. In addition, Scipy will provide the necesarry functions to do the [Fast Fourier transform](https://en.wikipedia.org/wiki/Fast_Fourier_transform), which is what we need in order to visualize the harmonic content of the waves."
+    "I will use pandas as a plotter helper, I have found it is an easier way to deal with matplotlib. Numpy and Scipy are used to generate the signals that we want to analyze. In addition, Scipy will provide the necesary functions to do the [Fast Fourier transform](https://en.wikipedia.org/wiki/Fast_Fourier_transform), which is what we need in order to visualize the harmonic content of the waves."
    ]
   },
   {
@@ -234,7 +234,7 @@
     "\n",
     "Square waves are used in many electronics applications, the most common one is for clock signals in digital circuits. In music synthesis, it is one of the most common and it is worth taking a closer look at it.\n",
     "\n",
-    "Below we see again the wave shape along with its frequency components. Different to the sine wave, we see 5 different frequency components. The one with the greater magnitude lies in the fundamental frequency of 440Hz, the rest are its harmonic components. As we can see, and this is one of the interesting parts, there are only odd harmonics (frequencies multiple of 3, 5, 7 and 9) which seem to decay in magnitude exponentially. This means that we could break down this signal into at least 5 different sine waves with different weights and frequencies based on odd multiples of the fundamental frequency."
+    "Below we see again the wave shape along with its frequency components. Different to the sine wave, we see 5 different frequency components. The one with the greater magnitude lies in the fundamental frequency of 440Hz, the rest are its harmonic components. As we can see, and this is one of the interesting parts, there are only odd harmonics (frequencies of 3, 5, 7 and 9 harmonic component) which seem to decay in magnitude exponentially. This means that we could break down this signal into at least 5 different sine waves with different amplitudes and frequencies based on odd multiples of the fundamental frequency."
    ]
   },
   {
